2010-12-29  Christopher Bratusek <zanghar@freenet.de>
	* src/events.c: rep_INTERN while-grabbed [Teika Kazura]

2010-12-28  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/state/wm-spec.jl
	* src/events.c: add support for NotfiyWhileGrabbed event
			explicitly handle NotifyUngrab event
			makes nil the fallback value, rather than ungrab
			-- [Harald van Dijk]

	* ICCCM-Selection >> HEAD: merged ICCCM-Selection branch. Adds
			support for MSS (Manager Selection Support),
			as described by ICCCM [2.8 4.3]. [Timo Korvola]

2010-12-20  Christopher Bratusek <zanghar@freenet.de>
	* ChangeLog
	* ChangeLog.TNG: merged

	* man/news.texi: typo fixes
			 updates

2010-12-18  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/tabs/tabgroup.jl: fixed a regression that made all
	windows in the group {un,}sticky when one became [fuchur]

2010-12-17  Christopher Bratusek <zanghar@freenet.de>
	* debian/control.in: make debian packaging scripts compatible with
	Debian/Experimental

2010-12-09  Christopher Bratusek <zanghar@freenet.de>
	* configure.in
	* lisp/sawfish/cfg/Makefile.in: fix installation for non-root-users by
	not hardcoding /usr for icons and kde4-prefix [Stefano Sabatini]

	* lisp/sawfish/wm/edge/actions.jl
	* lisp/sawfish/wm/edge/viewport-drag.jl
	* lisp/sawfish/wm/edge/hot-spots.jl
	* lisp/sawfish/wm/edge/flip.jl: renamed functions and variables so that
	they are easier to understand (activate/call/init confusion is gone now)
	- options none and hot-spot merged together (none/hot-spot)
	- code-cleanup in hot-spots
	- corrected copyright header of viewport-drag
	- some doc / indention fixes 
	-- Teika Kazura

2010-11-27  Teika kazura <teika@lavabit.com>
	* lisp/sawfish/wm/commands.jl
	* man/news.texi: Minor bugfix of interactive "call-command".
	It used to print an error message when you cancel an interactive
	call of `call-command' with the escape key, but it doesn't any
	more.

	* OPTIONS
	* lisp/sawfish/wm/commands.jl