@@ -1,3 +1,10 @@
+2011-01-06  Christopher Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/wm/commands/move-resize.jl
+	* lisp/sawfish/wm/menus.jl: added a function to resize either the
+	current-event-window or a given one, to a specific size. Also added
+	corresponding window-operations-menu entry. (resize-window-to-dimensions)
+	Improved version of a code snippet from GSR
+
 2010-12-29  Christopher Bratusek <zanghar@freenet.de>
 	* src/events.c: rep_INTERN while-grabbed [Teika Kazura]
 
